--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 /* BODY */
 body {
-    background-color: #c45a5a;
     display: flex;
     flex-direction: column;
 }
@@ -10,7 +9,6 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: antiquewhite;
 }
 .logo{
     display: flex;
@@ -48,6 +46,7 @@ header {
 
 /* PRESENTATION DU ZOO */
 .presentation{
+    font-size: 18px;
     display: flex;
     width: 60%;
     margin: 50px;
@@ -76,19 +75,50 @@ header {
 }
 
 
-
-
-
-
-
-
-
 .animaux, .habitat, .service{
     width: 200px;
     height: auto;
 }
 
+.slideshow {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
 
+.slideshow img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
 
+.slideshow img.active {
+    opacity: 1;
+}
 
+@keyframes slide {
+    0% { opacity: 0; }
+    20% { opacity: 1; }
+    80% { opacity: 1; }
+    100% { opacity: 0; }
+}
+.slideshow img:nth-child(1) {
+    animation: slide 12s infinite 0s;
+}
 
+.slideshow img:nth-child(2) {
+    animation: slide 12s infinite 3s;
+}
+
+.slideshow img:nth-child(3) {
+    animation: slide 12s infinite 6s;
+}
+
+.slideshow img:nth-child(4) {
+    animation: slide 12s infinite 9s;
+}
